Rename dto back to models
